[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Sprites/BossSprite.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemies/EnemyShooter.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 45.5435, 2.76796 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 240, 9.12621 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"hazards",
]]
scale = Vector2( -4.04306, 3.92656 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="WallDetector" type="Area2D" parent="." groups=[
"hazards",
]]
position = Vector2( 0, 72 )
scale = Vector2( 3.45442, 17.4213 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
shape = SubResource( 3 )

[node name="StompDetector" type="Area2D" parent="." groups=[
"stompables",
]]
position = Vector2( 0, -256 )
scale = Vector2( 5.56, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
shape = SubResource( 4 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( -240, 36 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -8, -20 )
scale = Vector2( 1, 22.7968 )
shape = SubResource( 5 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.6
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="body_entered" from="WallDetector" to="." method="_on_WallDetector_body_entered"]
[connection signal="area_entered" from="StompDetector" to="." method="_on_StompDetector_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
